feat: initial html and js with css

--- a/index.html
+++ b/index.html
@@ -8,22 +8,11 @@
 <body>
 
     <div class="top-row">
-        <input type="text" id="input-box" placeholder="Enter Task Name">
-        <button type="button" id="enter-button">Add Task</button>
+        <!-- Add Input Field -->
     </div>
 
     <div class="row">
-        <div id="to-do" class="list">
-            <h3>TODO</h3>
-        </div>
-
-        <div id="in-progress" class="list">
-            <h3>IN-PROGRESS</h3>
-        </div>
-
-        <div id="completed" class="list">
-            <h3>COMPLETED</h3>
-        </div>
+        <!-- Add Lists -->
     </div>
 
     <script src="app.js"></script>
